[package]
name = "rum_framework"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["HarrisonOwl <hyzitbios@hotmail.com>"]
description = "A toy web framework inspired by gin-gonic and express-js."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
mime = "0.3.16"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"